# temporenc-rust

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs  deserialize_random.rs  single_caller_deserialize_fixed.rs  single_caller_deserialize_random.rs  single_caller_deserialize_subsecond_ms.rs  single_caller_serialize_components_fixed.rs  single_caller_serialize_components_random.rs  single_caller_serialize_fixed.rs  single_caller_serialize_new_struct_random.rs  single_caller_serialize_random.rs  single_caller_serialize_struct_random.rs
benches/common/: mod.rs
src/: date_only.rs  date_time.rs  date_time_offset.rs  date_time_subsecond.rs  date_time_subsecond_offset.rs  frac_second.rs  lib.rs  polymorphic.rs  time_only.rs
tests/: date_only.rs  date_time.rs  date_time_offset.rs  date_time_second.rs  date_time_subsecond.rs  date_time_subsecond_offset.rs  time_only.rs
tests/common/: mod.rs
