[package]
name = "temporenc"
version = "0.0.3"
authors = ["Marshall Pierce <marshall@mpierce.org>"]
description = "Library for the Temporenc time/date format."
documentation = "https://docs.rs/temporenc/"
homepage = "https://github.com/temporenc/temporenc-rust"
repository = "https://github.com/temporenc/temporenc-rust"
readme = "README.md"
keywords = ["time", "date", "temporenc"]
categories = ["date-and-time", "encoding"]
license-file = "LICENSE.txt"

[dependencies]

[dev-dependencies]
rand = "0.3.15"

[profile.bench]
debug = true
